# otus-cpp-basic

./: .gitignore  README.md
ball/: Ball.cpp  Ball.hpp  Color.cpp  Color.hpp  Dust.hpp  Physics.cpp  Point.hpp  World.cpp
ball/black_box/: Application.cpp
ball/data/: smile.txt
containers/: CMakeLists.txt  icontainer.h  main.cpp  my_forward_list.cpp  my_forward_list.h  my_list.cpp  my_list.h  my_vector.cpp  my_vector.h  node.h
containers/tests/: test_vector.cpp
guess_number/: CMakeLists.txt  argument.cpp  argument.h  guess_number.cpp  high_scores.cpp  high_scores.h  high_scores.txt
hello_world/: CMakeLists.txt  hello_world.cpp
statistics/: CMakeLists.txt  istatistics.h  main.cpp  mean.h  mean_std.h  min_max.h  pct.h  pct90_95.h  std.h
threads/: .gitignore  64317.txt  CMakeLists.txt
threads/src/: top_words_thread.cpp  topk_words.cpp
